--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/earlyaccess/notosanstc.css);
+@import url('https://fonts.googleapis.com/css?family=Kalam');
 .card-container{
   width: 90%;
   margin: 0 auto 30px;
@@ -9,7 +10,10 @@ h1,h2,h3{
   margin-bottom: 0;
 }
 h1{
-  /* margin-top: 0.5em; */
+  margin-top: 0.2em;
+  font-family: 'Kalam', cursive;
+  font-weight: bold;
+  font-size: 40px;
   text-align: left;
 }
 .sort-item{
@@ -19,7 +23,7 @@ h1{
   align-items: center;
 }
 .sort-item > span{
-  margin-left: 35px;
+  margin-left: 30px;
   margin-right: 5px;
 }
 .card-txt{
